adcionadas funcoes de pesquisa e busca por clique

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <main>
-        <img class="pokemon_image" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/6.gif" alt="Pokemon">
+        <img class="pokemon_image" src="" alt="Pokemon">
 
         <h1 class="pokemon_data">
             <span class="pokemon_number">6</span> - 
@@ -20,7 +20,7 @@
         </h1>
 
         <form action="#" class="form">
-        <input type="search" placeholder="Insert Id or Number" required>
+        <input class="search" type="search" placeholder="Insert Id or Number" required>
         </form>
 
         <div class="buttons">
