adcionando função de visualização de pokemons shiny

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <img class="pokemon_image" src="" alt="Pokemon">
 
         <h1 class="pokemon_data">
-            <span class="pokemon_number">6</span> - 
-            <span class="pokemon_name">charizard</span>
+            <span class="pokemon_number"></span> - 
+            <span class="pokemon_name"></span>
         </h1>
+
+        <span class="pokemon_mode"></span>
 
         <form action="#" class="form">
         <input class="search" type="search" placeholder="Insert Id or Number" required>
@@ -27,6 +29,10 @@
             <button class="button btn-prev">&lt; Anterior</buttom>
             <button class="button btn-next">Próximo &gt;</buttom>    
         </div>
+
+        <button class="shiny button">
+            <img id="normal" class="shiny-image" src="./images/shiny.gif" alt="shiny-image">
+        </button>
 
         <img class="pokedex" src="./images/pokedex.png" alt="Pokedex">
     </main>
